1.优化顶栏，在每一个界面添加底栏顶栏 2.由于Sticky定位的限制因此在Search有关文件中顶栏与底栏统一使用Fixed定位，Grace在使用该布局时正文的div中一定要加bot-nav-fixed-body类，否则会显示异常 3.搜索界面仍需优化，请grace注意，居中等样式的调整。 4.底栏不同界面的底栏颜色未更改请相关负责人进行更改提交。

--- a/Message-dialog.html
+++ b/Message-dialog.html
@@ -16,6 +16,23 @@
 
 	</head>
 	<body>
+		<!-- 顶栏 -->
+		<nav class="top-header sticky-top shadow">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-2" align="center" style="vertical-align:bottom;">
+						<svg class="icon" aria-hidden="true" style="font-size: 10vw;color: white;">
+							<use xlink:href="#icon-fanhui"></use>
+						</svg>
+					</div>
+					<div class="col-8" style="height: 0 auto;color: white;font-size: 6vw;font-weight: bold;justify-content: center;"
+					 align="center">
+						正在与<a style="color: white;font-size: 6vw;font-weight: bold;">胡萝卜</a>私聊
+					</div>
+					<div class="col-2"></div>
+				</div>
+			</div>
+		</nav>
 		<script type="text/javascript" src="http://at.alicdn.com/t/font_1306353_d5trwbvsb05.js"></script>
 		<div>
 			<div class=" container-dialog-liu">
