--- a/initial.html
+++ b/initial.html
@@ -19,7 +19,7 @@
 		<!--<script type="text/javascript" src="http://at.alicdn.com/t/font_1306353_d5trwbvsb05.js"></script>-->
 		<div class="container-sh">
 			<!--名字-->
-			<div class="dialog-box-sh">
+			<div class="dialog-box-sh shadow">
 				<div class="circle-sh">
 					<div class="head-photo-sh">
 						<img class="id_img-sh" src="asserts/img/miemie.jpg" alt="miemie rock">
@@ -35,7 +35,7 @@
 			</div>
 			<!--我的订单-->
 			<a href="myOrder.html">
-				<div class="dialog-box-sh">
+				<div class="dialog-box-sh shadow">
 					<div class="circle-sh">
 						<div class="head-photo-sh">
 							<svg class="icon-sh" aria-hidden="true" alt="订单的图标">
@@ -49,7 +49,7 @@
 			</a>
 			<!--我发布的-->
 			<a href="release.html">
-				<div class="dialog-box-sh">
+				<div class="dialog-box-sh shadow">
 					<div class="circle-sh">
 						<div class="head-photo-sh">
 							<svg class="icon-sh" aria-hidden="true" alt="发布的图标">
@@ -62,19 +62,6 @@
 				</div>
 			</a>
 		</div>
-		<!--加回车 防止底栏将内容遮挡-->
-		<p>
-			<br />
-			<br />
-			<br />
-			<br />
-			<br />
-			<br />
-			<br />
-			<br />
-			<br />
-			<br />
-		</p>
 		<!-- 固定底栏 -->
 		<div class="footer-bot" style="z-index: 9999;">
 			<div class="container-fluid">
