--- a/release.html
+++ b/release.html
@@ -18,7 +18,7 @@
 	<body>
 		<div class="container-sh">
 			<!--名字-->
-			<div class="dialog-box-sh">
+			<div class="dialog-box-sh shadow">
 				<div class="circle-sh">
 					<div class="head-photo-sh">
 						<img class="id_img-sh" src="asserts/img/miemie.jpg" alt="miemie rock">
@@ -34,7 +34,7 @@
 			</div>
 			<!--我的订单-->
 			<a href="myOrder.html">
-				<div class="dialog-box-sh">
+				<div class="dialog-box-sh shadow">
 					<div class="circle-sh">
 						<div class="head-photo-sh">
 							<svg class="icon-sh" aria-hidden="true" alt="订单的图标">
@@ -47,7 +47,7 @@
 				</div>
 			</a>
 		<!--我发布的部分-->
-		<div class="order-open">
+		<div class="order-open shadow">
 
 				<!--左上方图片-->
 				<div class="circle-sh">
@@ -68,7 +68,7 @@
 					</span>
 				</a>
 				<!--内部div-->
-				<div class="inner-order-dialog-box">
+				<div class="inner-order-dialog-box shadow">
 					<!--<div class="circle-sh">
 						<div class="head-photo-sh">
 							<img class="id_img-sh" src="asserts/img/miemie.jpg" alt="头像">
@@ -95,19 +95,6 @@
 				</div>
 			</div>
 		</div>
-		<!--加回车 防止底栏将内容遮挡-->
-		<p>
-			<br />
-			<br />
-			<br />
-			<br />
-			<br />
-			<br />
-			<br />
-			<br />
-			<br />
-			<br />
-		</p>
 		<!-- 固定底栏 -->
 		<div class="footer-bot" style="z-index: 9999;">
 			<div class="container-fluid">
