--- a/search.html
+++ b/search.html
@@ -19,7 +19,8 @@
 		<nav class="searcontent shadow sticky-top search" style="width: 100%;">
 			<div class="container-fluid">
 				<div class="row" >
-					<div class="col-8"><input type="text" style="padding-left:5vw; font-size:5vw;margin: 1vw 0rem;height: 11vw;width: 100%;" placeholder="您想找点啥呢"></div>
+					<div class="col-8"><input type="text" class="index-zhe shadow" style="padding-left: 2vw;margin: 0;font-size: 6vw;margin-top:2vw;margin-bottom: 2vw;border-style: none;width: 100%; height: auto;"
+						 name="position" id="position" placeholder="你要找点儿啥呢？" /></div>
 					<div class="col-2"><svg class="icon" aria-hidden="true" style="color:var(--fColor);margin-top:1vw;margin-bottom: 1vw;font-size: 11vw;">
 							<use xlink:href="#icon-sousuo"></use>
 						</svg></div>
