--- a/Message-inform.html
+++ b/Message-inform.html
@@ -4,9 +4,34 @@
 	<head>
 		<meta charset="utf-8">
 		<title>通知</title>
-		<link rel="stylesheet" type="text/css" href="asserts/CSS/yespaceCss.css">
+		<!-- CSS库 -->
+		<!-- Bootstrap -->
+		<link rel="stylesheet" href="asserts/plugins/bootstrap/css/bootstrap.min.css" />
+		<link rel="stylesheet" href="asserts/CSS/yespaceCss.css" />
+		<!-- JS库 -->
+		<script src="asserts/js/Yespacejs.js" type="text/javascript"></script>
+		<script src="asserts/js/jquery.min.js" type="text/javascript"></script>
+		<script src="asserts/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+		<script src="http://at.alicdn.com/t/font_1306353_relcrq316p.js" type="text/javascript"></script>
 	</head>
 	<body>
+		<!-- 顶栏 -->
+		<nav class="top-header sticky-top shadow">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-2" align="center" style="vertical-align:bottom;">
+						<svg class="icon" aria-hidden="true" style="font-size: 10vw;color: white;">
+							<use xlink:href="#icon-fanhui"></use>
+						</svg>
+					</div>
+					<div class="col-8" style="height: 0 auto;color: white;font-size: 6vw;font-weight: bold;justify-content: center;"
+					 align="center">
+						系统通知
+					</div>
+					<div class="col-2"></div>
+				</div>
+			</div>
+		</nav>
 		<script type="text/javascript" src="http://at.alicdn.com/t/font_1306353_d5trwbvsb05.js"></script>
 		<div class="container-inform-liu">
 			<div class="dialog-box" >
