1.添加组件说明，README.md 2.删除index.html中的浮动说明

--- a/Add.html
+++ b/Add.html
@@ -3,7 +3,6 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<!-- CSS库 -->
 		<!-- Bootstrap -->
@@ -69,6 +68,7 @@
 				<div></div>
 
 			</div>
+			<!-- 浮动说明 -->
 			<div class="father" style="z-index: 9999;display: none;" id="instruction-second">
 				<div style="background: white;" class="son float-instruction shadow-irreguler">
 					<div style="width: 100%;height: 0 auto; background-color: var(--fColor);">
