1.修改底栏颜色 2.修改sx界面居中问题（未解决）

--- a/search.html
+++ b/search.html
@@ -38,17 +38,17 @@
 				<td>
 					<div class="history">
 						<ul>
-							<li style="font-size:40px;margin-left:15%;margin-top: 5vw;">历史搜索</li><!-- 历史搜索 -->
+							<li style="font-size:4vw;margin-left:15%;margin-top: 5vw;">历史搜索</li><!-- 历史搜索 -->
 						</ul>
-						<ul style="margin-left:15%">
+						<ul style="margin-left:15%;margin-top: 2.5vw;">
 							<li class="list-item2">
-								<a href="#" style="font-size:35px;"> 高数 </a>
+								<a href="#" style="font-size:3.5vw;"> 高数 </a>
 							</li>
 							<li class="list-item2">
-								<a href="#" style="font-size:35px;"> 美版iphone7 </a>
+								<a href="#" style="font-size:3.5vw;"> 美版iphone7 </a>
 							</li>
 							<li class="list-item2">
-								<a href="#" style="font-size:35px;"> 线性代数 </a>
+								<a href="#" style="font-size:3.5vw;"> 线性代数 </a>
 							</li>
 						</ul>
 					</div>
@@ -59,16 +59,16 @@
 					<div class="tophot">
 						<!-- 最高搜索热度 -->
 						<ul>
-							<li style="font-size:40px;margin-left:15%;">最高热度搜索</li>
+							<li style="font-size:4vw;margin-left:15%;margin-top: 5vw;">最高热度搜索</li>
 						</ul>
-						<ul style="margin-left:15% ">
-							<li class="list-item2" style="font-size:35px;">
+						<ul style="margin-left:15% ;margin-top: 2.5vw;">
+							<li class="list-item2" style="font-size:3.5vw;">
 								<a href="#"> 心理学</a>
 							</li>
-							<li class="list-item2" style="font-size:35px;">
+							<li class="list-item2" style="font-size:3.5vw;">
 								<a href="#"> 山地自行车 </a>
 							</li>
-							<li class="list-item2" style="font-size:35px;">
+							<li class="list-item2" style="font-size:3.5vw;">
 								<a href="#"> 口红 </a>
 							</li>
 						</ul>
@@ -79,7 +79,7 @@
 				<td>
 					<div class="logo" align="center">
 						<a href="search.html">
-							<svg class="icon" aria-hidden="true" style="color:#666666;opacity:0.2; font-size:500px;">
+							<svg class="icon" aria-hidden="true" style="color:#666666;opacity:0.2; font-size:50vw;">
 								<use xlink:href="#icon-logo"></use>
 							</svg>
 						</a>
@@ -92,12 +92,12 @@
 			<div class="container-fluid" >
 				<div class="row" >
 					<div class="col-2"  align="center" id="home" onclick="">
-						<svg class="icon" aria-hidden="true" style="font-size: 9vw;margin-top: 2vw;color: black;">							
+						<svg class="icon" aria-hidden="true" style="font-size: 9vw;margin-top: 2vw;">							
 						<use xlink:href="#icon-zhuye"></use>
 						</svg><!-- <a style="color: var(--fColor);font-size: 2vw;margin-bottom: 1vw">主页</a> -->
 					</div>
 					<div class="col-2" align="center" id="search" onclick="">
-						<svg class="icon" aria-hidden="true" style="font-size: 9vw;margin-top:2vw;">
+						<svg class="icon" aria-hidden="true" style="font-size: 9vw;margin-top:2vw;color: black;">
 							<use xlink:href="#icon-sousuo"></use>
 						</svg><!-- <a style="color: var(--fColor);font-size: 2vw;margin-bottom: 1vw">搜索</a> -->
 					</div>
