--- a/searchdnzk.html
+++ b/searchdnzk.html
@@ -123,7 +123,15 @@
 										</li>
 									</div>
 									<div class="col-3 " align="center">
-										<li><a href="#" style="font-size: 3.8vw;">最高价</a></li>
+										<li><a href="#" style="font-size: 3.8vw;">最高价</a>
+											<ul>
+												<li><input type="text" style="list-style: none;border-bottom-left-radius: 0px;
+											border-top-left-radius: 0px;
+											border-bottom-right-radius: 0px;
+											border-top-right-radius: 0px;
+										"></li>
+											</ul>
+										</li>
 									</div>
 								</div>
 							</ul>
@@ -267,12 +275,12 @@
 				<div class="container-fluid">
 					<div class="row">
 						<div class="col-2" align="center" id="home" onclick="">
-							<svg class="icon" aria-hidden="true" style="font-size: 9vw;margin-top: 2vw;color: black;">
+							<svg class="icon" aria-hidden="true" style="font-size: 9vw;margin-top: 2vw;">
 								<use xlink:href="#icon-zhuye"></use>
 							</svg><!-- <a style="color: var(--fColor);font-size: 2vw;margin-bottom: 1vw">主页</a> -->
 						</div>
 						<div class="col-2" align="center" id="search" onclick="">
-							<svg class="icon" aria-hidden="true" style="font-size: 9vw;margin-top:2vw;">
+							<svg class="icon" aria-hidden="true" style="font-size: 9vw;margin-top:2vw;color: black;">
 								<use xlink:href="#icon-sousuo"></use>
 							 </svg><!--<a style="color: var(--fColor);font-size: 2vw;margin-bottom: 1vw">搜索</a> -->
 						</div>
