--- a/Add.html
+++ b/Add.html
@@ -57,10 +57,11 @@
 				 align="center">
 					<input type="text" class="index-zhe shadow" style="margin-left: 0vw;padding-left: 3vw;font-size: 3vw;border-style: none;height: auto;width:100%;"
 					 name="itemName" placeholder="物品名称" />
-					<textarea name="itemParameter" class="index-zhe shadow box6" style="margin-left: 0vw;margin-top: 3vw; padding-top: 1vw;
+					 <div class="index-zhe shadow" style="border-radius: 2.25rem;overflow: hidden;padding: 0;margin: 0;margin-top: 3vw;">
+					<textarea name="itemParameter" class="box6" style="margin-left: 0vw; padding-top: 1vw;
 					  padding-left: 3vw;padding-right: 3vw; font-size: 3vw;border-style: none;height: 30vw;width:100%;"
-					 placeholder="在此输入您的产品描述/参数"></textarea>
-					 <div style="background-color: red;height: "></div>
+					 placeholder="在此输入您的产品描述/参数"></textarea></div>
+					 <div style="background-color: red;height: 1%"></div>
 				</div>
 				<div>
 
