--- a/Message-dialog.html
+++ b/Message-dialog.html
@@ -13,7 +13,7 @@
 		<script src="asserts/js/Yespacejs.js" type="text/javascript"></script>
 		<script src="asserts/js/jquery.min.js" type="text/javascript"></script>
 		<script src="asserts/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-
+		<script type="text/javascript" src="http://at.alicdn.com/t/font_1306353_d5trwbvsb05.js"></script>
 	</head>
 	<body>
 		<!-- 顶栏 -->
@@ -33,7 +33,6 @@
 				</div>
 			</div>
 		</nav>
-		<script type="text/javascript" src="http://at.alicdn.com/t/font_1306353_d5trwbvsb05.js"></script>
 		<div>
 			<div class=" container-dialog-liu">
 				<p>
@@ -116,8 +115,9 @@
 						<div class="col-2"><svg class="icon" id="tupian" aria-hidden="true" style="font-size: 13vw;" >
 								<use xlink:href="#icon-tupian"></use>
 							</svg></div>
-						<div class="col-2" style="margin-top: 1vw;"><svg class="icon" id="yuyin" aria-hidden="true" style="font-size: 10vw;color: var(--sColor);"
-							onmousedown="liudown(this)" onmouseup="liuup(this)">
+						<div class="col-2" style="margin-top: 1vw;" id="yuyinliu" >
+							<svg class="icon" id="yuyin" aria-hidden="true" style="font-size: 10vw;color: var(--sColor);"
+							onmousedown="liudown(this)" onmouseup="liuup(this)" >
 								<use xlink:href="#icon-yuyin"></use>
 							</svg></div>
 						<div class="col-2">
@@ -128,7 +128,7 @@
 					</div>
 					<div class="row">
 						<div class="col-10" align="center" style="padding: 1vw;">
-							<div class="input-liu shadow-irreguler"></div>
+							<input type="text" name="input" id="input-liu" value="" class="shadow-irreguler input-liu " style="font-size: 40px;" onkeyup="liuinput('input-liu')" />
 						</div>
 						<div class="col-2" align="center">
 							<div onclick="show_liu()">
@@ -136,10 +136,85 @@
 									<use xlink:href="#icon-xinzeng"></use>
 								</svg>
 							</div>
+							<svg id="fabu-liu" class="icon" aria-hidden="true" style="font-size: 10vw;color: var(--fColor);display: none;">
+								<use xlink:href="#icon-fabu"></use>
+							</svg>
 						</div>
 					</div>
 				</div>
+				<div style="float: left;position: fixed;">
+					<input type="button" name="" id="messageBtn-liu" value="" style="background-color: var(--fColor); width: 100%;height:10vw;bottom: 0;position: fixed;left: 0;display: none;font-size: 6vw;color: white;font-weight: bold;"/>
+				</div>
 			</div>
 		</div>
+	<script type="text/javascript">
+		function liuinput(obj){
+			var fbl = document.getElementById('fabu-liu');
+			var xzl = document.getElementById('xinzeng-liu');
+			if(document.getElementById(obj).value.length!==0){
+				xzl.style.display = "none";
+				fbl.style.display = "";
+			}else{
+				xzl.style.display = "";
+				fbl.style.display = "none";
+			}
+		};
+		var vliu = document.getElementsByClassName("voice-liu")[0];
+		var yyliu = document.getElementById('yuyin');
+		var btnElem=document.getElementById("yuyinliu");
+		var ipliu = document.getElementById('messageBtn-liu');
+		var posStart = 0;//初始化起点坐标
+		var posEnd = 0;//初始化终点坐标
+		var posMove = 0;//初始化滑动坐标
+		console.log(screen);
+		function initEvent() {
+			btnElem.addEventListener("touchstart", function(event) {
+				event.preventDefault();//阻止浏览器默认行为
+				posStart = 0;
+				posStart = event.touches[0].pageY;//获取起点坐标
+				ipliu.value = '松开结束，上划取消';
+				console.log("start");
+				console.log(posStart+'---------开始坐标');
+				vliu.style.display = "";
+				ipliu.style.display = "";
+				yyliu.style.color = 'var(--fColor)';
+			});
+			btnElem.addEventListener("touchmove", function(event) {
+				event.preventDefault();//阻止浏览器默认行为
+				posMove = 0;
+				posMove = event.targetTouches[0].pageY;//获取滑动实时坐标
+				if(posStart - posMove < 200){
+					ipliu.value = '松开结束，上划取消';
+				}else{
+					ipliu.value = '松开手指，取消发送';
+				}
+			});
+			btnElem.addEventListener("touchend", function(event) {
+				event.preventDefault();
+				posEnd = 0;
+				posEnd = event.changedTouches[0].pageY;//获取终点坐标
+				btnElem.value = '按住 说话';
+				console.log("End");
+				console.log(posEnd+'---------结束坐标');
+				if(posStart - posEnd < 200 ){
+					console.log("发送成功");
+					save();
+				}else{
+					console.log("取消发送");
+					console.log("Cancel");
+				};
+				vliu.style.display = "none";
+				ipliu.style.display = "none";
+				yyliu.style.color = 'var(--sColor)';
+				ipliu.value = '';
+			});
+		};
+		initEvent();
+		function save(){
+			//ajax
+			console.log('Success');
+		}
+	</script>
+	
 	</body>
 </html>
