1.新增界面 searchzuixin.html(搜索结果为带筛选框的电脑) 2.修改DN SX DNZK 的最高价最低价 3.（缺漏：拖动条未完成，轮播界面未完成）

--- a/searchdn.html
+++ b/searchdn.html
@@ -94,10 +94,7 @@
 											 alt="computer" style="margin-top: 100px;">
 										</td>
 									</tr>
-
 								</table>
-
-
 							</div>
 
 						</div>
@@ -113,7 +110,7 @@
 								戴尔笔记本-7成新-￥8850
 							</div>
 							<div>
-								<a href="#">
+								<a href="#" style="color: var(--fColor);">
 									<br />
 									设备
 								</a>
