--- a/searchdnzk.html
+++ b/searchdnzk.html
@@ -4,8 +4,15 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<title>搜索结果为电脑展开</title>
-		<link rel="stylesheet" href="asserts/CSS/yespaceCss.css">
+		<!-- CSS库 -->
+		<!-- Bootstrap -->
 		<link rel="stylesheet" href="asserts/plugins/bootstrap/css/bootstrap.min.css" />
+		<link rel="stylesheet" href="asserts/CSS/yespaceCss.css" />
+		<!-- JS库 -->
+		<script src="asserts/js/Yespacejs.js" type="text/javascript"></script>
+		<script src="asserts/js/jquery.min.js" type="text/javascript"></script>
+		<script src="asserts/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+		<script src="http://at.alicdn.com/t/font_1306353_relcrq316p.js" type="text/javascript"></script>
 		<script type="text/javascript">
 			startList = function() {
 				if (document.all && document.getElementById) {
@@ -21,12 +28,10 @@
 						}
 					}
 				}
-
+				
 			}
 			window.onload = startList;
 		</script>
-		<script type="text/javascript" src="http://at.alicdn.com/t/font_1306353_cayoehnv9o.js"></script>
-		<base target="_blank">
 
 	</head>
 	<body>
@@ -112,27 +117,14 @@
 										</li>
 									</div>
 									<div class="col-3 " align="center">
-										<li><a href="#" style="font-size: 3.8vw;">最低价</a>
-											<ul>
-												<li><input type="text" style="list-style: none;border-bottom-left-radius: 0px;
-											border-top-left-radius: 0px;
-											border-bottom-right-radius: 0px;
-											border-top-right-radius: 0px;
-										"></li>
-											</ul>
-										</li>
-									</div>
-									<div class="col-3 " align="center">
-										<li><a href="#" style="font-size: 3.8vw;">最高价</a>
-											<ul>
-												<li><input type="text" style="list-style: none;border-bottom-left-radius: 0px;
-											border-top-left-radius: 0px;
-											border-bottom-right-radius: 0px;
-											border-top-right-radius: 0px;
-										"></li>
-											</ul>
-										</li>
-									</div>
+																			<li><a href="#" style="font-size: 3.8vw;"><input type="text" style="border-style: none;width: 60%; height: auto;color:#4C51B1;"
+									name="position" id="position" placeholder="最低价" /></a></li> 
+																		</div>
+																		<div class="col-3 " align="center">
+																			<li><li><a href="#" style="font-size: 3.8vw;"><input type="text" style="border-style: none;width: 60%; height: auto;color:#4C51B1;"
+									name="position" id="position" placeholder="最高价" /></a></li>
+																			</li>
+																		</div>
 								</div>
 							</ul>
 						</div>
