--- a/myOrder.html
+++ b/myOrder.html
@@ -98,6 +98,18 @@
 					<!--文字部分-->
 				</div>
 			</a>
+			<!--我的关注-->
+			<div class="dialog-box-sh shadow">
+				<div class="circle-sh">
+					<div class="head-photo-sh head-photo-size">
+							<svg style="color:white;" class="icon-star" aria-hidden="true" alt="关注的图标">
+								<use xlink:href="#icon-shoucang"></use>
+							</svg>
+					</div>
+				</div>
+				<div class="word-sh">我的关注</div>
+				<!--文字部分-->
+			</div>
 		</div>
 		<!-- 固定底栏 -->
 		<div class="footer-bot" style="z-index: 9999;">
