--- a/Add.html
+++ b/Add.html
@@ -84,9 +84,106 @@
 							</div>
 						</form>
 					</div>
-					<div class="container-fluid"></div>
-					<div class="index-zhe shadow" style="background-color: var(--fColor);color: white;font-size: 4vw;">
-						123
+					<div class="sxzl" id="menus">
+						<div class="sxzl">
+							<ul id="menu1">
+								<div class="row">
+									<div class="col-3 " align="center">
+										<li><a href="#" id="sortout" style="font-size: 3.8vw;">类别&nbsp;&nbsp;&nbsp;▼</a>
+											<ul id="menu2">
+												<li><a href="#">无</a></li>
+												<li><a class="seconds" href="#">学习&nbsp;&nbsp;→</a>
+													<ul style="padding-left: 0;">
+														<li><a href="#">文具</a></li>
+														<li><a href="#">课本</a></li>
+														<li><a href="#">习题</a></li>
+													</ul>
+												</li>
+												<li><a class="seconds" href="#">数码&nbsp;&nbsp;&nbsp;→</a>
+													<ul>
+														<li><a href="#">电脑</a></li>
+														<li><a href="#">手机</a></li>
+														<li><a href="#">配饰</a></li>
+													</ul>
+												</li>
+												<li><a class="seconds" href="#">日用&nbsp;&nbsp;&nbsp;→</a>
+													<ul>
+														<li><a href="#">洗护</a></li>
+														<li><a href="#">清洁</a></li>
+														<li><a href="#">护理</a></li>
+													</ul>
+												</li>
+												<li><a class="seconds" href="#">运动&nbsp;&nbsp;&nbsp;→</a>
+													<ul>
+														<li><a href="#">运动服饰</a></li>
+														<li><a href="#">运动器械</a></li>
+														<li><a href="#">运动装备</a></li>
+													</ul>
+												</li>
+												<li><a class="seconds" href="#">服饰&nbsp;&nbsp;&nbsp;→</a>
+													<ul>
+														<li><a href="#">女装</a></li>
+														<li><a href="#">男装</a></li>
+														<li><a href="#">童装</a></li>
+													</ul>
+												</li>
+												<li><a class="seconds" href="#" id="food">食品&nbsp;&nbsp;&nbsp;→</a>
+													<ul>
+														<li><a href="#">坚果</a></li>
+														<li><a href="#">熟食</a></li>
+														<li><a href="#">饮品</a></li>
+													</ul>
+												</li>
+											</ul>
+										</li>
+									</div>
+									<div class="col-3 " align="center">
+										<li><a href="#" id="lowers" style="font-size: 3.8vw;">折旧度▼</a>
+											<ul style="padding-left: 0;">
+												<li><a href="#">九成</a></li>
+												<li><a href="#">八成</a></li>
+												<li><a href="#">七成</a></li>
+												<li><a href="#">六成</a></li>
+												<li><a href="#">五成</a></li>
+												<li><a href="#">四成</a></li>
+												<li><a href="#">三成</a></li>
+												<li><a href="#">二成</a></li>
+												<li><a href="#" id="botm">一成</a></li>
+											</ul>
+										</li>
+									</div>
+									<div class="col-3 " align="center">
+										<li><a href="#" style="font-size: 3.8vw;">最低价</a>
+											<ul>
+												<li><input type="text" style="list-style: none;border-bottom-left-radius: 0px;
+											border-top-left-radius: 0px;
+											border-bottom-right-radius: 0px;
+											border-top-right-radius: 0px;
+										"></li>
+											</ul>
+										</li>
+									</div>
+									<div class="col-3 " align="center">
+										<li><a href="#" style="font-size: 3.8vw;">最高价</a></li>
+									</div>
+								</div>
+							</ul>
+						</div>
+						</div>
+					<div class="container-fluid" style="position: fixed;">
+						<div class="row">
+							<div class="col-4"></div>
+							<div class="col-4">
+								<div class="index-zhe shadow" style="background-color: var(--fColor);color: white;font-size: 4vw;">
+									取消添加
+								</div>
+							</div>
+							<div class="col-4">
+								<div class="index-zhe shadow" style="background-color: var(--fColor);color: white;font-size: 4vw;">
+									确定添加
+								</div>
+							</div>
+					
 					</div>
 				</div>
 				
