添加Message的所有注释

--- a/Message-dialog.html
+++ b/Message-dialog.html
@@ -33,121 +33,143 @@
 				</div>
 			</div>
 		</nav>
-		<div>
-			<div class=" container-dialog-liu">
-				<p>
-					<div class="otherp-liu">
-						<div class="dialog-box shadow" style="margin: 30px 100px;">
-							<div class="word-left-liu">
-								你觉得这个东西怎么样？
-							</div>
-							<div class="circle">
-								<div class="head-photo">
-									<img class="id_img-liu" src="asserts/img/20130107210933_nGz3r.jpeg" alt="miemie rock">
-								</div>
+		<!-- 中间部分聊天框 -->
+		<div class="container-dialog-liu">
+			<p>
+				<!-- 对方的聊天内容 -->
+				<div class="otherp-liu">
+					<div class="dialog-box shadow" style="margin: 30px 100px;">
+						<!-- 对方发送的聊天文本 -->
+						<div class="word-left-liu">
+							你觉得这个东西怎么样？
+						</div>
+						<!-- 头像 -->
+						<div class="circle">
+							<div class="head-photo">
+								<img class="id_img-liu" src="asserts/img/20130107210933_nGz3r.jpeg" alt="miemie rock">
 							</div>
 						</div>
 					</div>
-				</p>
-				<p>
-					<div class="mine-liu" style="width: 100%;" align="right">
-						<div class="dialog-box shadow" style="margin: 30px 100px;background-color: #fff;">
-							<div class="word-right-liu" align="left">
-								我觉得不错
-							</div>
-							<div class="circle">
-								<div class="head-photo">
-									<img class="id_img-liu" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1565333434507&di=e547d8b3600d51794de1f175fc9efa9a&imgtype=0&src=http%3A%2F%2Fimg4.duitang.com%2Fuploads%2Fitem%2F201312%2F05%2F20131205172433_NsYGL.thumb.600_0.jpeg"
-									 alt="miemie rock">
-								</div>
-							</div>
-						</div>
-					</div>
-				</p>
-				<p>
-					<div class="mine-liu" style="width: 100%;" align="right">
-						<div class="dialog-box shadow" style="margin: 30px 100px;background-color: #fff;">
-							<div class="word-right-liu " style="margin: 45px 190px 45px 50px;color: var(--fColor);" align="left">
-								我觉得不错我觉得不错我觉得不错我觉得不错我觉得不错我觉得不错我觉得不错我觉得不错我觉得不错我觉得不错
-							</div>
-							<div class="circle">
-								<div class="head-photo">
-									<img class="id_img-liu" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1565333434507&di=e547d8b3600d51794de1f175fc9efa9a&imgtype=0&src=http%3A%2F%2Fimg4.duitang.com%2Fuploads%2Fitem%2F201312%2F05%2F20131205172433_NsYGL.thumb.600_0.jpeg"
-									 alt="miemie rock">
-								</div>
+				</div>
+			</p>
+			<p>
+				<!-- 对方的聊天内容 -->
+				<div class="otherp-liu">
+					<div class="dialog-box shadow" style="margin: 30px 100px;">
+						<!-- 发送的图片 -->
+						<img src="asserts/img/miemie.jpg" style="width: 100%;z-index: -1;float: right;border-radius: 60px;" />
+						<!-- 头像 -->
+						<div class="circle">
+							<div class="head-photo">
+								<img class="id_img-liu" src="asserts/img/20130107210933_nGz3r.jpeg" alt="miemie rock">
 							</div>
 						</div>
 					</div>
-				</p>
-				<p>
-					<div class="mine-liu" style="width: 100%;" align="right">
-						<div class="dialog-box shadow" style="margin: 30px 100px;background-color: white;width: 50%;">
-							<img src="http://b-ssl.duitang.com/uploads/item/201709/14/20170914120928_m3QLv.jpeg" style="width: 100%;z-index: -1;float: right;border-radius: 60px;" />
-							<div class="circle">
-								<div class="head-photo">
-									<img class="id_img-liu" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1565333434507&di=e547d8b3600d51794de1f175fc9efa9a&imgtype=0&src=http%3A%2F%2Fimg4.duitang.com%2Fuploads%2Fitem%2F201312%2F05%2F20131205172433_NsYGL.thumb.600_0.jpeg"
-									 alt="miemie rock">
-								</div>
+				</div>
+			</p>
+			<p>
+				<!-- 我的聊天内容 -->
+				<div class="mine-liu" style="width: 100%;" align="right">
+					<div class="dialog-box shadow" style="margin: 30px 100px;background-color: #fff;">
+						<!-- 我发送的聊天文本 -->
+						<div class="word-right-liu" align="left">
+							我觉得不错
+						</div>
+						<!-- 头像 -->
+						<div class="circle">
+							<div class="head-photo">
+								<img class="id_img-liu" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1565333434507&di=e547d8b3600d51794de1f175fc9efa9a&imgtype=0&src=http%3A%2F%2Fimg4.duitang.com%2Fuploads%2Fitem%2F201312%2F05%2F20131205172433_NsYGL.thumb.600_0.jpeg"
+								 alt="miemie rock">
 							</div>
 						</div>
 					</div>
-				</p>
-				<p>
-					<div class="mine-liu" style="width: 100%;" align="right">
-						<div class="dialog-box shadow" style="margin: 30px 100px;background-color: #fff;">
-							<div class="word-right-liu" align="left">
-								[语音] 59s
-							</div>
-							<div class="circle">
-								<div class="head-photo">
-									<img class="id_img-liu" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1565333434507&di=e547d8b3600d51794de1f175fc9efa9a&imgtype=0&src=http%3A%2F%2Fimg4.duitang.com%2Fuploads%2Fitem%2F201312%2F05%2F20131205172433_NsYGL.thumb.600_0.jpeg"
-									 alt="miemie rock">
-								</div>
+				</div>
+			</p>
+			<p>
+				<!-- 我的聊天内容 -->
+				<div class="mine-liu" style="width: 100%;" align="right">
+					<div class="dialog-box shadow" style="margin: 30px 100px;background-color: white;width: 50%;">
+						<!--发送的图片 -->
+						<img src="asserts/img/miemie.jpg" style="width: 100%;z-index: -1;float: right;border-radius: 60px;" />
+						<!-- 头像 -->
+						<div class="circle">
+							<div class="head-photo">
+								<img class="id_img-liu" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1565333434507&di=e547d8b3600d51794de1f175fc9efa9a&imgtype=0&src=http%3A%2F%2Fimg4.duitang.com%2Fuploads%2Fitem%2F201312%2F05%2F20131205172433_NsYGL.thumb.600_0.jpeg"
+								 alt="miemie rock">
 							</div>
 						</div>
 					</div>
-				</p>
-			</div>
-
-			<div class="bottom-liu shadow-irreguler">
-				<div class="container-fluid">
-					<div class="row mark-liu" style="display: none;">
-						<div class="col-2"><svg class="icon" id="tupian" aria-hidden="true" style="font-size: 13vw;" >
-								<use xlink:href="#icon-tupian"></use>
-							</svg></div>
-						<div class="col-2" style="margin-top: 1vw;" id="yuyinliu" >
-							<svg class="icon" id="yuyin" aria-hidden="true" style="font-size: 10vw;color: var(--sColor);"
-							onmousedown="liudown(this)" onmouseup="liuup(this)" >
-								<use xlink:href="#icon-yuyin"></use>
-							</svg></div>
-						<div class="col-2">
-							<img class="voice-liu" src="asserts/img/spinner.svg" style="height: 8vw;margin-top: 2vw;display:none;"
-								onmousedown="liudown(this)" onmouseup="liuup(this)">
+				</div>
+			</p>
+			<p>
+				<!-- 我的聊天内容 -->
+				<div class="mine-liu" style="width: 100%;" align="right">
+					<div class="dialog-box shadow" style="margin: 30px 100px;background-color: #fff;">
+						<!-- 语音 -->
+						<div class="word-right-liu" align="left">
+							[语音] 59s
 						</div>
-						<div class="col-6"></div>
-					</div>
-					<div class="row">
-						<div class="col-10" align="center" style="padding: 1vw;">
-							<input type="text" name="input" id="input-liu" value="" class="shadow-irreguler input-liu " style="font-size: 40px;" onkeyup="liuinput('input-liu')" />
-						</div>
-						<div class="col-2" align="center">
-							<div onclick="show_liu()">
-								<svg id="xinzeng-liu" class="icon" aria-hidden="true" style="font-size: 10vw;color: var(--sColor);">
-									<use xlink:href="#icon-xinzeng"></use>
-								</svg>
+						<!-- 头像 -->
+						<div class="circle">
+							<div class="head-photo">
+								<img class="id_img-liu" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1565333434507&di=e547d8b3600d51794de1f175fc9efa9a&imgtype=0&src=http%3A%2F%2Fimg4.duitang.com%2Fuploads%2Fitem%2F201312%2F05%2F20131205172433_NsYGL.thumb.600_0.jpeg"
+								 alt="miemie rock">
 							</div>
+						</div>
+					</div>
+				</div>
+			</p>
+		</div>
+		<!-- 底栏 -->
+		<div class="bottom-liu shadow-irreguler">
+			<div class="container-fluid">
+				<!-- 点击加号出现的扩展框 -->
+				<div class="row mark-liu" style="display: none;">
+					<!-- 图片按钮 -->
+					<div class="col-2"><svg class="icon" id="tupian" aria-hidden="true" style="font-size: 13vw;" >
+							<use xlink:href="#icon-tupian"></use>
+						</svg></div>
+					<!-- 语音输入按钮 -->
+					<div class="col-2" style="margin-top: 1vw;" id="yuyinliu" >
+						<svg class="icon" id="yuyin" aria-hidden="true" style="font-size: 10vw;color: var(--sColor);"
+						onmousedown="liudown(this)" onmouseup="liuup(this)" >
+							<use xlink:href="#icon-yuyin"></use>
+						</svg></div>
+					<!-- 触摸语音后出现的动态长条图片 -->
+					<div class="col-2" id="voice-liu">
+						<img class="voice-liu" src="asserts/img/spinner.svg" style="height: 8vw;margin-top: 2vw;display:none;"
+							onmousedown="liudown(this)" onmouseup="liuup(this)">
+					</div>
+					<div class="col-6"></div>
+				</div>
+				<div class="row">
+					<!-- 底栏输入框 -->
+					<div class="col-10" align="center" style="padding: 1vw;">
+						<input type="text" name="input" id="input-liu" value="" class="shadow-irreguler input-liu " style="font-size: 40px;" onkeyup="liuinput('input-liu')" />
+					</div>
+					<div class="col-2" align="center">
+						<!-- 加号按钮 -->
+						<div onclick="show_liu()">
+							<svg id="xinzeng-liu" class="icon" aria-hidden="true" style="font-size: 10vw;color: var(--sColor);">
+								<use xlink:href="#icon-xinzeng"></use>
+							</svg>
+						</div>
+						<!-- 发布按钮 -->
+						<div>
 							<svg id="fabu-liu" class="icon" aria-hidden="true" style="font-size: 10vw;color: var(--fColor);display: none;">
 								<use xlink:href="#icon-fabu"></use>
 							</svg>
 						</div>
 					</div>
 				</div>
-				<div style="float: left;position: fixed;">
-					<input type="button" name="" id="messageBtn-liu" value="" style="background-color: var(--fColor); width: 100%;height:10vw;bottom: 0;position: fixed;left: 0;display: none;font-size: 6vw;color: white;font-weight: bold;"/>
-				</div>
+			</div>
+			<!-- 触摸语音后出现的弹出框 -->
+			<div style="float: left;position: fixed;">
+				<input type="button" name="" id="messageBtn-liu" value="" style="background-color: var(--fColor); width: 100%;height:10vw;bottom: 0;position: fixed;left: 0;display: none;font-size: 6vw;color: white;font-weight: bold;"/>
 			</div>
 		</div>
 	<script type="text/javascript">
+		// 在输入框内输入字后出现发布按钮
 		function liuinput(obj){
 			var fbl = document.getElementById('fabu-liu');
 			var xzl = document.getElementById('xinzeng-liu');
@@ -159,6 +181,7 @@
 				fbl.style.display = "none";
 			}
 		};
+		// 触摸语音出现的一系列的效果
 		var vliu = document.getElementsByClassName("voice-liu")[0];
 		var yyliu = document.getElementById('yuyin');
 		var btnElem=document.getElementById("yuyinliu");
