--- a/Message-inform.html
+++ b/Message-inform.html
@@ -13,6 +13,7 @@
 		<script src="asserts/js/jquery.min.js" type="text/javascript"></script>
 		<script src="asserts/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 		<script src="http://at.alicdn.com/t/font_1306353_relcrq316p.js" type="text/javascript"></script>
+		<script type="text/javascript" src="http://at.alicdn.com/t/font_1306353_d5trwbvsb05.js"></script>
 	</head>
 	<body>
 		<!-- 顶栏 -->
@@ -32,12 +33,15 @@
 				</div>
 			</div>
 		</nav>
-		<script type="text/javascript" src="http://at.alicdn.com/t/font_1306353_d5trwbvsb05.js"></script>
+		<!-- 除顶栏外的 -->
 		<div class="container-inform-liu">
+			<!-- 一条通知 -->
 			<div class="dialog-box" >
+				<!-- 文本 -->
 				<div class="word-left-liu">
 					资金已转入平台账户，请您于25小时内将物品放入xx柜，开箱码xxxxxx，开箱码只能使用一次，一次之后失效。
 				</div>
+				<!-- 铃铛头像 -->
 				<div class="circle">
 					<div class="head-photo">
 						<svg class="icon bell-liu" aria-hidden="true">
@@ -46,10 +50,13 @@
 					</div>
 				</div>
 			</div>
+			<!-- 一条通知 -->
 			<div class="dialog-box" >
+				<!-- 文本 -->
 				<div class="word-left-liu">
 					资金已转入平台账户，请我想跳舞啊啊啊啊啊啊您于25小时内将物品放入xx柜，开箱码xxxxxx，开箱码只能使用一次，一次之后失效。
 				</div>
+				<!-- 铃铛头像 -->
 				<div class="circle">
 					<div class="head-photo">
 						<svg class="icon bell-liu" aria-hidden="true">
